--- a/wound_assistant_recovery/android/app/build.gradle
+++ b/wound_assistant_recovery/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.woundassistant.recovery'
+    namespace 'com.estherfaith.mothermend'
     defaultConfig {
-        applicationId 'com.woundassistant.recovery'
+        applicationId 'com.estherfaith.mothermend'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
